[package]
name = "cloud-feedback"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
cloud-domain.workspace = true
cloud-store.workspace = true
serde.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
