[package]
name = "cloud-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
cloud-domain.workspace = true
cloud-store.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
