[package]
name = "cloud-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
askama.workspace = true
axum.workspace = true
chrono.workspace = true
cloud-admin.workspace = true
cloud-download.workspace = true
cloud-domain.workspace = true
cloud-feedback.workspace = true
cloud-release.workspace = true
cloud-site.workspace = true
cloud-site-media.workspace = true
cloud-store.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
